主界面数据解析

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,9 @@
     <color name="tab_normal">#FFCFD0CF</color>
     <color name="tab_select">#efefef</color>
     <color name="indicator_bg">#FFEFEFEF</color>
+    <color name="bg_common_gray">#ffe2e2e2</color>
+    <color name="title_color">#ffff621d</color>
+    <color name="value_color">#ffa2a2a2</color>
+    <color name="white">#ffffffff</color>
 
 </resources>
