--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="list_image_width">98.0dip</dimen>
+    <dimen name="list_image_heigh">98.0dip</dimen>
+    <dimen name="tv_product_size">16.0sp</dimen>
 </resources>
