--- a/app/src/main/res/layout/fragment_main_head.xml
+++ b/app/src/main/res/layout/fragment_main_head.xml
@@ -7,36 +7,17 @@
               android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="140dp">
 
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/vp_mainfrag"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            >
-
-        </android.support.v4.view.ViewPager>
-
-        <ysg.gdcp.cn.shoppingmall.view.Indicator
-            android:id="@+id/indicator"
-            android:layout_width="90dp"
-            android:layout_height="20dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            app:indicator_num="3"
-            app:indicator_raduis="5"
-            />
-    </RelativeLayout>
+    <include layout="@layout/fragment_main_banner"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_goodskinds"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="#FFFDFDFE"></android.support.v4.view.ViewPager>
+    <!-- 电影列表 布局-->
+
+    <include layout="@layout/fragment_main_film"/>
 
 
 </LinearLayout>
