--- a/app/src/main/res/layout/fragment_mian.xml
+++ b/app/src/main/res/layout/fragment_mian.xml
@@ -4,10 +4,15 @@
               android:orientation="vertical"
     >
 
-            <ListView
-                android:id="@+id/lv_mainFragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></ListView>
+
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/lv_mainFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+
+    </com.handmark.pulltorefresh.library.PullToRefreshListView>
 
 
 </LinearLayout>
