--- a/app/src/main/res/layout/goods_list_item.xml
+++ b/app/src/main/res/layout/goods_list_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/list_view_item_click"
     android:orientation="vertical">
 
@@ -24,9 +24,10 @@
             android:layout_height="wrap_content">
 
             <FrameLayout
-                android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
+
                 <ImageView
                     android:id="@+id/photo"
                     android:layout_width="@dimen/list_image_width"
@@ -36,21 +37,23 @@
                     android:src="@mipmap/default_list_pic"/>
 
                 <ImageView
-                    android:visibility="gone"
                     android:layout_width="@dimen/list_image_width"
                     android:layout_height="@dimen/list_image_heigh"
                     android:layerType="software"
                     android:scaleType="centerCrop"
-                    android:src="@mipmap/pic_b"/>
+                    android:src="@mipmap/pic_b"
+                    android:visibility="gone"/>
 
 
                 <com.facebook.drawee.view.SimpleDraweeView
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
                     android:id="@+id/iv_icon2"
                     android:layout_width="100dp"
-                    fresco:placeholderImage="@mipmap/pic_b"
-                    android:layout_height="80dp"/>
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    fresco:placeholderImage="@mipmap/pic_b">
+                </com.facebook.drawee.view.SimpleDraweeView>
+
 
                 <ImageView
                     android:id="@+id/appoitment_img"
@@ -121,11 +124,12 @@
                     android:layout_marginRight="3.0dip">
 
                     <LinearLayout
-                        android:visibility="gone"
                         android:id="@+id/fresh_order_layout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="2.0dip">
+                        android:padding="2.0dip"
+                        android:visibility="gone">
+
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
