--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="list_image_width">98.0dip</dimen>
     <dimen name="list_image_heigh">98.0dip</dimen>
     <dimen name="tv_product_size">16.0sp</dimen>
+    <dimen name="section_text_size">18.0sp</dimen>
+    <dimen name="near_by_textSize1">17.0sp</dimen>
 </resources>
