集成百度地图定位与检索功能

--- a/app/src/main/res/layout/fragment_around.xml
+++ b/app/src/main/res/layout/fragment_around.xml
@@ -1,15 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="ysg.gdcp.cn.shoppingmall.fragment.AroundFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+              android:orientation="vertical"
+                tools:context="ysg.gdcp.cn.shoppingmall.fragment.AroundFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <Button
-        android:onClick="btn_aro"
         android:id="@+id/btn_around"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="btn_aro"
         android:text="NOHTTP"/>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_loac"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="点击跳转到地图"/>
+
+</LinearLayout>
