--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="tv_product_size">16.0sp</dimen>
     <dimen name="section_text_size">18.0sp</dimen>
     <dimen name="near_by_textSize1">17.0sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
