--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,7 +13,7 @@
         android:layout_above="@+id/layout_buy"
         android:background="@color/app_gray">
 
-        <ScrollView
+        <ysg.gdcp.cn.shoppingmall.view.MyScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -246,7 +246,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
-        </ScrollView>
+        </ysg.gdcp.cn.shoppingmall.view.MyScrollView>
 
         <RelativeLayout
             android:id="@+id/layout_title"
