将要二维码集成

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -127,21 +127,6 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content" >
 
-                    <EditText
-                        android:id="@+id/username"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:background="@null"
-                        android:hint="@string/uname_hint"
-                        android:padding="16.0dip"
-                        android:paddingLeft="12.0dip"
-                        android:scrollHorizontally="true"
-                        android:singleLine="true"
-                        android:text=""
-                        android:textColorHint="@color/gray01"
-                        android:textSize="@dimen/size_20" />
-
                     <ImageView
                         android:id="@+id/iv_delete_uname"
                         android:layout_width="40.0dip"
@@ -151,6 +136,22 @@
                         android:scaleType="center"
                         android:src="@mipmap/delete_username"
                         android:visibility="gone" />
+
+                    <EditText
+                        android:id="@+id/username"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:hint="@string/uname_hint"
+                        android:padding="16.0dip"
+                        android:paddingLeft="12.0dip"
+                        android:scrollHorizontally="true"
+                        android:singleLine="true"
+                        android:textColorHint="@color/gray01"
+                        android:textSize="@dimen/size_20"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"/>
                 </RelativeLayout>
 
                 <View
@@ -370,7 +371,7 @@
                 android:layout_marginTop="15.0dip"
                 android:background="@drawable/round_btn_orange_self_selector"
                 android:enabled="false"
-                android:text="@string/login"
+                android:text="@string/qucik_login"
                 android:textColor="@color/white"
                 android:textSize="18.0sp"
                 android:textStyle="bold" />
