--- a/app/src/main/res/layout/fragment_mian.xml
+++ b/app/src/main/res/layout/fragment_mian.xml
@@ -4,6 +4,7 @@
               android:orientation="vertical"
     >
 
+    <include layout="@layout/title_bar"/>
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/lv_mainFragment"
