--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -34,7 +34,7 @@
 
     <ImageView
         android:id="@+id/scan_img"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="fill_parent"
         android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
@@ -119,7 +119,7 @@
 
     <LinearLayout
         android:id="@+id/inputLL"
-        android:layout_width="310dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10.0dip"
@@ -130,7 +130,7 @@
         android:orientation="horizontal"
         android:paddingBottom="5.0dip"
         android:paddingTop="5.0dip"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="wrap_content"
